crates/rapport/tests/snapshots/cargo_ok_basic_crate_build.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 0
stdout:
---
status: pass
duration: [duration]

## Next

└ run rapport test [project]
stderr:
---
(empty)
