crates/rapport/tests/snapshots/cargo_ok_workspace_test.snap
---
source: crates/rapport/tests/cargo_e2e.rs
expression: result.snapshot()
---
exit: 0
stdout:
---
status: pass
duration: [duration]

## Next

└ run rapport validate [project]
stderr:
---
(empty)
