crates/rapport/tests/snapshots/swift_fail_failing_test_validate.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
SwiftPM project: [project]
Failing phase: test
## Output

```
Test Suite 'RapportFixtureTests' failed
```

status: FAIL
duration: [duration]

## Next

└ run rapport lint [project]
└ run rapport build [project]
└ run rapport test [project]
