crates/rapport/tests/snapshots/swift_fail_format_needed_lint.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 1
stdout:
---
(empty)
stderr:
---
SwiftPM project: [project]
Failing phase: lint
## Output

```
Sources/RapportFixture/Greeter.swift:1:1: warning: source is not formatted
```

status: FAIL
duration: [duration]

## Next

└ run rapport fix [project]
